k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edc-administration-api-client
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: edc-administration-api-client
  ports:
    - name: http
      port: 8080
      targetPort: http
