k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: edc-administration-api-client
spec:
  hostnames:
    - edc-proxy.localhost
  parentRefs:
    - name: edcv-gateway
      namespace: edc-v
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: edc-administration-api-client
          port: 8080
